k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: ums-frontend
  namespace: ums-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ums-frontend
  template:
    metadata:
      labels:
        app: ums-frontend
    spec:
      imagePullSecrets:
        - name: regcred
    spec:
      containers:
        - name: ums-frontend
          image: pdock855/dr-front:placefolder
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      nodeSelector: 
        env: 'prod'
