k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ums-service
  namespace: ums-prod
spec:
  selector:
    app: ums-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
